# epsi_proj_trans_cpp_oop

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
include/: Application.h  CollisionUtils.h  GUILayer.h  GameGrid.h  GameObject.h  Hotbar.h  Inventory.h  Item.h  MainMenuScene.h  Player.h  Precompiled.h  RandomNumberGenerator.h  ResourceRegistry.h  Scene.h  ThreadPool.h  Tiles.h  Window.h
include/engine/: Application.h  ResourceRegistry.h  Scene.h  Window.h
include/engine/glad/: glad.h  glad_glx.h  glad_wgl.h
include/engine/math/: Matrix3.h  Matrix4.h  Vector2.h  Vector3.h  Vector4.h
include/engine/renderers/: Color.h  IndexBuffer.h  Mapping.h  Pipeline.h  Pipeline3D.h  Pipeline3DTextured.h  Renderer.h  RendererObjects.h  Shader.h  Texture.h  VertexBuffer.h  VertexBufferBase.h  VertexBufferElement.h  VertexBufferLayout.h
include/engine/renderers/directx/: DirectXRenderer.h
include/engine/renderers/metal/: MetalRenderer.h
include/engine/renderers/opengl/: IndexBuffer.h  OpenGLRenderer.h  Pipeline.h  Shader.h  Texture.h  VertexBuffer.h  VertexBufferBase.h
include/engine/renderers/vulkan/: VulkanRenderer.h
include/glad/: glad.h  glad_wgl.h
include/items/: Apple.h  Carrot.h  Hoe.h  WateringCan.h
include/math/: Vector2.h
include/renderers/: Renderer.h
include/renderers/directx/: DirectXRenderer.h
include/renderers/metal/: MetalRenderer.h
include/renderers/opengl/: OpenGLRenderer.h
include/renderers/vulkan/: VulkanRenderer.h
scripts/: .gitignore  GenerateTilemap.cpp
shaders/: Basic3D.frag  Basic3D.vert  Basic3DTexture.frag  Basic3DTexture.vert  fragmentShader.frag  vertexShader.vert
src/: Application.cpp  GUILayer.cpp  GameGrid.cpp  Hotbar.cpp  Inventory.cpp  Item.cpp  MainMenuScene.cpp  Player.cpp  ThreadPool.cpp  Window.cpp  glad.cpp  glad_wgl.cpp  main.cpp
src/engine/: Application.cpp  CollisionUtils.cpp  GUILayer.cpp  RandomNumberGenerator.cpp  ThreadPool.cpp  Window.cpp  glad.cpp  glad_glx.cpp  glad_wgl.cpp  stbi_impl.cpp
src/engine/Linux/: Window.cpp
src/engine/Linux/opengl/: OpenGLRenderer.cpp
src/engine/Windows/: Window.cpp
src/engine/Windows/opengl/: OpenGLRenderer.cpp
src/engine/renderers/: Pipeline3D.cpp  Pipeline3DTextured.cpp
src/engine/renderers/directx/: DirectXRenderer.cpp
src/engine/renderers/metal/: MetalRenderer.cpp
src/engine/renderers/opengl/: IndexBuffer.cpp  OpenGLRenderer.cpp  Pipeline.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp  VertexBufferBase.cpp
src/engine/renderers/vulkan/: VulkanRenderer.cpp
src/items/: Apple.cpp  Carrot.cpp  Hoe.cpp  WateringCan.cpp
src/renderers/directx/: DirectXRenderer.cpp
src/renderers/metal/: MetalRenderer.cpp
src/renderers/opengl/: OpenGLRenderer.cpp
src/renderers/vulkan/: VulkanRenderer.cpp
src/tiles/: GroundTile.cpp  PassagePointTile.cpp  PathTile.cpp  SoilTile.cpp  WallTile.cpp
working_directory/assets/tilemaps/: tilemap.htf
